# llm-degen-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml
src/degen_guard/: __init__.py  detector.py  report.py
tests/: test_detector.py  test_e2e.py  test_streaming.py
tests/fixtures/: samples.py
