[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-degen-guard"
version = "0.1.1"
description = "Model-agnostic LLM output degeneration detector — 4-signal composite scoring in a single pass"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "QuartzUnit" }]
keywords = [
    "llm",
    "degeneration",
    "repetition",
    "detection",
    "guardrail",
    "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/QuartzUnit/llm-degen-guard"
Repository = "https://github.com/QuartzUnit/llm-degen-guard"
Issues = "https://github.com/QuartzUnit/llm-degen-guard/issues"
Documentation = "https://github.com/QuartzUnit/llm-degen-guard#readme"
Changelog = "https://github.com/QuartzUnit/llm-degen-guard/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/degen_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
